minecraft-stack/jar-explorer/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jar-explorer-service
  namespace: minecraft-stack
spec:
  selector:
    app: jar-explorer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
