minecraft-stack/jar-explorer/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jar-explorer-internal-ingress
  namespace: minecraft-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    gethomepage.dev/description: jar-explorer for minecraft
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Minecraft
    gethomepage.dev/name: jar-explorer
    gethomepage.dev/ping: jar-explorer.rke
    gethomepage.dev/pod-selector: ""
    nginx.ingress.kubernetes.io/proxy-buffers: "8"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/client-max-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: jar-explorer.rke  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jar-explorer-service
                port:
                  number: 8080
